[package]
name = "wit-bindgen-wasmcloud-provider-host"
version = "0.1.0"
authors = ["The wasmCloud Team"]
categories = ["wasm"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/wasmCloud/wasmCloud"
publish = false
rust_version = "1.70.0"
description = """
Bindgen macro for Rust-based, host-module wasmCloud capability providers
"""

[lib]
proc-macro = true
           
[features]
default = []
debug = []

[dependencies]
proc-macro2 = "1.0.66"
# NOTE: the syn dependency here is why this can't be used from *inside* wasmCloud/wasmCloud 
syn = { version = "1.0.92", features = [ "parsing", "full", "visit-mut", "extra-traits" ] }
wasm-metadata = "0.10.1"
heck = "0.4.1"
wasmtime-component-macro = { version = "11.0.1", features = [ "async" ] }
wasmtime-wit-bindgen = "11.0.1"
wit-parser = "0.8.0"
serde = "1.0.183"
anyhow = "1.0.72"
quote = "1.0.32"
